Fixed top margin for aligned images

--- a/less/base.less
+++ b/less/base.less
@@ -118,6 +118,10 @@ p img {
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 }
+p img.alignleft,
+p img.alignright {
+	margin-top: 10px;
+}
 
 code {
 	padding: 2px 6px;
